ajout de couleur... Mise à jour de la liste au retour sur l'écran Design à revoir =(

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">GestionnaireCourses</string>
+    <string name="app_name">Liste de course</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_liste_course">ListeCourseActivity</string>
+    <string name="title_activity_liste_course">Détails</string>
 </resources>
